# glucose_app

./: .gitignore  LICENSE  README.md  pyproject.toml
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  types.ts  utils.ts
frontend/src/context/: pacientContext.tsx
glucose_app/: .env  manage.py  pytest.ini
glucose_app/api/: __init__.py
glucose_app/api/meal/: filterset.py  repository.py  serializer.py  use_case.py  viewset.py
glucose_app/api/measurement/: __init__.py  filterset.py  repository.py  serializer.py  tests.py  use_case.py  viewsets.py
glucose_app/api/user/: __init__.py
glucose_app/glicemy/: apps.py  models.py
glucose_app/glicemy/migrations/: 0001_initial.py
glucose_app/glucose_app/: asgi.py  routers.py  settings.py  urls.py  wsgi.py
glucose_app/injection/: models.py
glucose_app/injection/migrations/: 0001_initial.py  0002_alter_injection_ui.py  0002_injection_pacient.py
glucose_app/insulin/: apps.py  models.py
glucose_app/insulin/migrations/: 0001_initial.py  0002_insulin_dosis_insulin_pacient.py  0003_insulin_is_correction.py
glucose_app/meal/: models.py
glucose_app/meal/migrations/: 0001_initial.py  0002_meal_type.py  0003_alter_meal_cho.py  0004_alter_meal_type.py  0005_meal_obs.py
glucose_app/measurement/: admin.py  factory.py  models.py
glucose_app/measurement/migrations/: 0001_initial.py  0002_alter_measurement_glicemy.py  0002_measurement_pacient.py  (+3 more)
glucose_app/pacient/: admin.py  models.py
glucose_app/user/: admin.py  manager.py  models.py
glucose_app/utils/: pagination.py
(+46 files in other folders)
